syntax = "proto3";

package sge.legacy.house.module.v1;

import "cosmos/app/v1alpha1/module.proto";

// Module is the config object of the house module.
message Module {
  option (cosmos.app.v1alpha1.module) = {
    go_import : "sge/x/house"
  };

  string fee_collector_name = 1;

  // authority defines the custom module authority. If not set, defaults to the
  // governance module.
  string authority = 2;
}
