syntax = "proto3";
package sgenetwork.sge.strategicreserve;

option go_package = "github.com/sge-network/sge/x/strategicreserve/types";

// FeeGrant represents the fee grant object of the strategic reserve module
// account.
message FeeGrant {
  // creator is the account address of the creator.
  string creator = 1;

  // grantee is the account address of the grantee.
  string grantee = 2;

  // grant_block_time is the block time of the grant.
  int64 grant_block_time = 3;
}